[package]
name = "netext-core"
version = "0.3.1"
edition = "2021"

[lib]
name = "netext_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
hashbrown = { version = "0.14.5", default-features = false, features = ["allocator-api2", "inline-more"] }
indexmap = "2.2.6"
petgraph = "0.6.4"
priority-queue = "2.0.2"
rand = "0.8.4"
rstar = "0.12.0"
tracing = "0.1.40"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.20"

[dependencies.pyo3]
version = "0.21.2"
features = ["abi3-py310"]
