[project]
name = "netext"
version = "0.3.1"
description = "A graph (network) rendering library for the terminal."
authors = [{ name = "Malte Klemm", email = "me@malteklemm.de" }]
license = { text = "MIT Licence" }
readme = "README.md"
keywords = ["network", "graph", "terminal", "rich"]
requires-python = ">=3.10"
dependencies = ["rich>=13", "networkx~=3.0", "cachetools>=5.3.0", "typing-extensions>=4.12.2"]

[project.optional-dependencies]
textual = ["textual>=1"]

[project.scripts]
netext-debug = "netext.cli.routing_debugger:main"

[project.urls]
"Source code" = "https://github.com/mahrz24/netext"
Documentation = "https://mahrz24.github.io/netext/"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "netext._core"
features = ["pyo3/extension-module"]

[tool.pyright]
executionEnvironments = [{ root = "netext"}]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
venvPath = ".pixi/envs"
venv = "linting"
pythonVersion = "3.10"

[tool.black]
preview = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.scriv]
format = "md"

[tool.setuptools]
py-modules = ["netext"]
